# Mobilytix

./: .dockerignore  .env.runtime.example  .gitignore  GUIDANCE.md  LICENSE  NOTICE  README.md  TOOLS.md  mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-images.yml
benchmark/: allsafe_pentest_report.md  android_benchmark_full.md  mobilytix_pentest_benchmark_evaluation.md  mobilytix_pentest_benchmark_matrix.csv  ostorlab_insecure_app_flutter_pentest_report_v2.md
config/: config.example.yaml
docker/: docker-compose.runtime.yml  docker-compose.yml
docker/android/: Dockerfile  healthcheck.sh  mobilytix-entrypoint.sh  start.sh
docker/static/: Dockerfile
mcp_server/: __init__.py  __main__.py  config.py  findings_store.py  server.py  session_manager.py
mcp_server/backends/: __init__.py  local_backend.py
mcp_server/models/: __init__.py  enums.py  finding.py  session.py
mcp_server/tools/: __init__.py  base.py  findings_management.py  registry.py  session_tools.py  workspace.py
mcp_server/tools/dynamic/: device.py  frida_tools.py  storage.py  traffic.py  ui.py
mcp_server/tools/dynamic/frida_scripts/: __init__.py  list_loaded_classes.js
mcp_server/tools/static/: artifacts.py  code.py  crypto.py  dotnet.py  flutter.py  framework.py  manifest.py  native.py  react_native.py  routing.py  sast.py  secrets.py  security_overview.py  tampering.py  unity.py  web_hybrid.py
prompts/: pentest_system_prompt.txt
scripts/: setup.sh
tests/: conftest.py  test_config.py  test_device_tools.py  test_findings_store.py  test_frida_tools.py  test_session_manager.py  test_static_tools.py  test_ui_tools.py
tests/apks/: README.md
